fix3 overflow: no scrollbar

--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -191,7 +191,7 @@ img{
     /*margin: 0px 0px 0px 0px;*/
     /*padding: 0 0 20px 0;*/
 	width: 100%;
-    overflow: visible;
+    overflow: hidden;
 }
 
 #main{
